upload songs to firebase and cancel on routeleave

--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" 
     crossorigin="anonymous" />
-  <link href="assets/css/main.css" rel="stylesheet" />
+  <link href="/src/assets/main.css" rel="stylesheet" />
 </head>
 
 <body class="bg-gray-100 font-sans pb-24">
@@ -41,7 +41,7 @@
   <!-- Introduction -->
   <section class="mb-8 py-20 text-white text-center relative">
     <div class="absolute inset-0 w-full h-full bg-contain introduction-bg"
-      style="background-image: url(assets/img/header.png)"></div>
+      style="background-image: url(/src/assets/img/header.png)"></div>
     <div class="container mx-auto">
       <div class="text-white main-header-content">
         <h1 class="font-bold text-5xl mb-5">Listen to Great Music!</h1>
