--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -69,7 +69,7 @@ input[type="file"]{
 .music-bg {
   animation: slide 50s linear infinite;
   will-change: background-position;
-  background-image: url(./assets/img/song-header.png);
+  background-image: url(/src/assets/img/song-header.png);
 }
 
 @keyframes progress-bar-stripes {
